--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,9 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --dark-grey: #e7e7e7;
+  --dg-text-color: #000000;
+  --blue-primary: rgba(60, 53, 255, 1);
 }
 
 /* @media (prefers-color-scheme: dark) {
