--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,8 @@
 
   --fluid-40-60: clamp(2.5rem, 2.0652rem + 2.1739vw, 3.75rem);
   --fluid-24-36: clamp(1.5rem, 1.2391rem + 1.3043vw, 2.25rem);
+  --fluid-16-24: clamp(1rem, 0.8261rem + 0.8696vw, 1.5rem);
+  --fluid-16-18: clamp(1rem, 0.9565rem + 0.2174vw, 1.125rem);
 
   --blue: #3c35ff;
 }
@@ -45,9 +47,27 @@ h2 {
     width: fit-content;
     height: fit-content;
     transition: background-color 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
+    font-size: var(--fluid-16-24);
   }
 
   .btn:hover {
+    background-color: white;
+    color: var(--blue);
+    box-shadow: inset 0 0 0 1px var(--blue);
+  }
+
+  .btn-2 {
+    background-color: var(--blue);
+    color: white;
+    border-radius: 25px;
+    padding: 6px 16px;
+    width: fit-content;
+    height: fit-content;
+    transition: background-color 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
+    font-size: var(--fluid-16-18);
+  }
+
+  .btn-2:hover {
     background-color: white;
     color: var(--blue);
     box-shadow: inset 0 0 0 1px var(--blue);
