--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,17 +5,21 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
-  --dark-grey: #e7e7e7;
-  --dg-text-color: #000000;
-  --blue-primary: rgba(60, 53, 255, 1);
 
-  --fluid-40-60: clamp(2.5rem, 2.0652rem + 2.1739vw, 3.75rem);
-  --fluid-24-36: clamp(1.5rem, 1.2391rem + 1.3043vw, 2.25rem);
-  --fluid-16-24: clamp(1rem, 0.8261rem + 0.8696vw, 1.5rem);
-  --fluid-16-18: clamp(1rem, 0.9565rem + 0.2174vw, 1.125rem);
-  --fluid-12-16: clamp(0.75rem, 0.663rem + 0.4348vw, 1rem);
+  /* Tekst størrelse for alle paragraf tekster */
+  --text: clamp(1rem, 0.9565rem + 0.2174vw, 1.125rem);
 
-  --blue: #3c35ff;
+  /* Tekst størrelse til under-undertitler, h3 */
+  ---sub-subtitle: clamp(1.125rem, 1.0815rem + 0.2174vw, 1.25rem);
+
+  /* Tekst størrelse til undertitler, h2 */
+  --subtitle: clamp(1.25rem, 1.2065rem + 0.2174vw, 1.375rem);
+
+  /* Tekst størrelse til titler */
+  --title: clamp(1.5rem, 1.413rem + 0.4348vw, 1.75rem);
+
+  /* Tekst størrelse til store titler, h1 */
+  --main-title: clamp(2rem, 1.7826rem + 1.087vw, 2.625rem);
 }
 
 /* @media (prefers-color-scheme: dark) {
@@ -31,58 +35,27 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-h1 {
-  font-size: var(--fluid-40-60);
+p {
+  font-size: var(--text);
+}
+
+h3,
+h4 {
+  font-size: var(---sub-subtitle);
 }
 
 h2 {
-  font-size: var(--fluid-24-36);
+  font-size: var(--subtitle);
 }
 
-h3 {
-  font-size: var(--fluid-12-16);
+h1 {
+  font-size: var(--main-title);
 }
 
-@layer components {
-  .btn {
-    background-color: var(--blue);
-    color: white;
-    border-radius: 25px;
-    padding: 6px 16px;
-    width: fit-content;
-    height: fit-content;
-    transition: background-color 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
-    font-size: var(--fluid-16-24);
-  }
-
-  .btn:hover {
-    background-color: white;
-    color: var(--blue);
-    box-shadow: inset 0 0 0 1px var(--blue);
-  }
-
-  .btn-2 {
-    background-color: var(--blue);
-    color: white;
-    border-radius: 25px;
-    padding: 6px 16px;
-    width: fit-content;
-    height: fit-content;
-    transition: background-color 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
-    font-size: var(--fluid-16-18);
-  }
-
-  .btn-2:hover {
-    background-color: white;
-    color: var(--blue);
-    box-shadow: inset 0 0 0 1px var(--blue);
-  }
-
-  .footer {
-    background-image: url("../app/img/footer-wave.svg");
-    object-fit: cover;
-    height: 100%;
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
-}
+/* .footer {
+  background-image: url("../app/img/footer-wave.svg");
+  object-fit: cover;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+} */
